--- a/responsive-website.html
+++ b/responsive-website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Responsive Website</title>
+        <title>HOGWARTS</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="responsive.css">
     </head>
